# eigenmath

./: meson.build
src/: display.c  main.c  meson.build
