eigenmath_sources = [
    'abs.c',
    'add.c',
    'adj.c',
    'arccos.c',
    'arccosh.c',
    'arcsin.c',
    'arcsinh.c',
    'arctan.c',
    'arctanh.c',
    'arg.c',
    'atomize.c',
    'besselj.c',
    'bessely.c',
    'bignum.c',
    'binomial.c',
    'ceiling.c',
    'choose.c',
    'circexp.c',
    'clock.c',
    'coeff.c',
    'cofactor.c',
    'conj.c',
    'contract.c',
    'core.c',
    'cos.c',
    'cosh.c',
    'defint.c',
    'degree.c',
    'denominator.c',
    'derivative.c',
    'det.c',
    'display.c',
    'eigen.c',
    'erf.c',
    'erfc.c',
    'eval.c',
    'exp.c',
    'expand.c',
    'expcos.c',
    'expsin.c',
    'factor.c',
    'factorial.c',
    'factorpoly.c',
    'factors.c',
    'filter.c',
    'float.c',
    'floor.c',
    'for.c',
    'gcd.c',
    'globals.c',
    'guess.c',
    'hermite.c',
    'hilbert.c',
    'imag.c',
    'index.c',
    'inner.c',
    'integral.c',
    'inv.c',
    'is.c',
    'isprime.c',
    'laguerre.c',
    'latex.c',
    'lcm.c',
    'leading.c',
    'legendre.c',
    'log.c',
    'mag.c',
    'main.c',
    'mathjax.c',
    'mathml.c',
    'mod.c',
    'multiply.c',
    'nroots.c',
    'numerator.c',
    'outer.c',
    'polar.c',
    'pollard.c',
    'power.c',
    'prime.c',
    'primetab.c',
    'print.c',
    'product.c',
    'quotient.c',
    'rationalize.c',
    'real.c',
    'rect.c',
    'roots.c',
    'run.c',
    'scan.c',
    'setq.c',
    'sgn.c',
    'simfac.c',
    'simplify.c',
    'sin.c',
    'sinh.c',
    'stack.c',
    'sum.c',
    'symbol.c',
    'tan.c',
    'tanh.c',
    'taylor.c',
    'tensor.c',
    'test.c',
    'transpose.c',
    'userfunc.c',
]

executable('eigenmath', eigenmath_sources, dependencies: libm, install: true)

